[gd_scene load_steps=2 format=3 uid="uid://nybw7kveovfw"]

[ext_resource type="Script" path="res://UI/upgrade_screen.gd" id="1_w4l5g"]

[node name="UpgradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4l5g")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 26
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Choose an upgrade:"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 18
alignment = 1

[node name="Choice 1" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
text = "Positive Effect Description //
Negative Effect Description"

[node name="Choice 2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Choice 2"

[node name="Choice 3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Choice 3"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Choice 1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Choice 2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Choice 3" to="." method="_on_choice_3_pressed"]
